--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,7 +49,7 @@
         android:layout_marginBottom="200dp"
         android:text="Signup"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/backFromSignuputton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textEmailId" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/backFromSignuputton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
