--- a/app/src/main/res/layout/activity_submit_order.xml
+++ b/app/src/main/res/layout/activity_submit_order.xml
@@ -7,164 +7,154 @@
     android:layout_height="match_parent"
     tools:context=".SubmitOrderActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="446dp"
-        android:layout_height="767dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
-    <TextView
-        android:id="@+id/QuantityTextView"
-        android:layout_width="97dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="46dp"
-        android:text="Quantity"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SideTextView" />
-
     <TextView
         android:id="@+id/AccountIdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="156dp"
         android:text="Account Id"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/SideTextView"
-        android:layout_width="95dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
-        android:text="Side"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/InstrumentTextView" />
-
-    <TextView
         android:id="@+id/InstrumentTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:text="Symbol"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AccountIdTextView" />
 
+    <TextView
+        android:id="@+id/QuantityTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Quantity"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/InstrumentTextView" />
+
+    <TextView
+        android:id="@+id/SideTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Side"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/QuantityTextView" />
+
     <com.toptoche.searchablespinnerlibrary.SearchableSpinner
         android:id="@+id/spinnerAccountID"
-        android:layout_width="255dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="225dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.toptoche.searchablespinnerlibrary.SearchableSpinner
         android:id="@+id/spinnerSymbol"
-        android:layout_width="254dp"
-        android:layout_height="34dp"
+        android:layout_width="225dp"
+        android:layout_height="29dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerAccountID" />
 
-    <RadioButton
-        android:id="@+id/sellRadioButton"
-        android:layout_width="106dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:text="Sell"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSymbol" />
-
-    <RadioButton
-        android:id="@+id/buyRadioButton"
-        android:layout_width="105dp"
-        android:layout_height="31dp"
+    <RadioGroup
+        android:id="@+id/buySellRadioGroup"
+        android:layout_width="225dp"
+        android:layout_height="29dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Buy"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/sellRadioButton"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSymbol" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quantityEditText">
+
+        <RadioButton
+            android:id="@+id/buyRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:text="Buy"
+            android:textSize="20sp" />
+
+        <RadioButton
+            android:id="@+id/sellRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="35dp"
+            android:text="Sell"
+            android:textSize="20sp" />
+    </RadioGroup>
 
     <EditText
         android:id="@+id/quantityEditText"
-        android:layout_width="243dp"
-        android:layout_height="40dp"
+        android:layout_width="223dp"
+        android:layout_height="36dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buyRadioButton" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSymbol" />
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="144dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
         android:text="Submit"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantityEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/buySellRadioGroup" />
 
     <TextView
         android:id="@+id/createOrderTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="56dp"
         android:text="Create Order"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/portfolioHomeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="48dp"
         android:text="Home"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/QuantityTextView" />
+        app:layout_constraintEnd_toStartOf="@+id/backButtonFromSubmitOrder"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:id="@+id/backButtonFromSubmitOrder"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="48dp"
         android:text="Back"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
