--- a/app/src/main/res/layout/activity_submit_order.xml
+++ b/app/src/main/res/layout/activity_submit_order.xml
@@ -112,8 +112,8 @@
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:text="Submit"
@@ -135,8 +135,8 @@
 
     <Button
         android:id="@+id/portfolioHomeButton"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="48dp"
@@ -148,8 +148,8 @@
 
     <Button
         android:id="@+id/backButtonFromSubmitOrder"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="48dp"
         android:text="Back"
