--- a/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
+++ b/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
@@ -34,7 +34,7 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkStatusButton" />
+        app:layout_constraintTop_toBottomOf="@+id/orderStatusButton" />
 
     <Button
         android:id="@+id/backFromOptionScreenButton"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/checkStatusButton"
+        android:id="@+id/orderStatusButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
