--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,17 @@
     android:layout_height="wrap_content"
     android:backgroundTint="#652B0B"
     android:backgroundTintMode="add"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="198dp"
+        android:layout_height="109dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/fixengine" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
