--- a/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
+++ b/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/portfolioButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="158dp"
+        android:layout_height="41dp"
         android:layout_marginTop="42dp"
         android:text="See Portfolio"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,8 +18,8 @@
 
     <Button
         android:id="@+id/placeOrderButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="159dp"
+        android:layout_height="42dp"
         android:layout_marginTop="150dp"
         android:text="Place a Trade"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,21 +38,33 @@
 
     <Button
         android:id="@+id/backFromOptionScreenButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="86dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="120dp"
+        android:backgroundTint="#FFB300"
+        android:backgroundTintMode="add"
         android:text="Back"
+        android:textColor="#5E35B1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/orderStatusButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="151dp"
+        android:layout_height="39dp"
         android:layout_marginTop="42dp"
         android:text="Order Status"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/portfolioButton" />
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="96dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp"
+        android:text="LOGOUT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
