--- a/app/src/main/res/layout/activity_order_execution.xml
+++ b/app/src/main/res/layout/activity_order_execution.xml
@@ -13,6 +13,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +26,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execOrderIdTextView" />
 
@@ -33,6 +39,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textColor="@color/teal_200"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execAccountIdTextView" />
 
@@ -43,6 +52,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execStatusTextView" />
 
@@ -53,6 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execSymbolSideTextView" />
 
@@ -63,6 +74,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/totalOrderQtyTextView" />
 
@@ -73,6 +85,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Enter Quantity : "
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execOrderQtyTextView" />
 
@@ -82,6 +95,7 @@
         android:layout_width="200sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/execPriceEditText"
         app:layout_constraintTop_toBottomOf="@+id/execOrderQtyTextView" />
 
@@ -92,6 +106,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Enter Price : "
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execQuantityEditText" />
 
