--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,7 +12,7 @@
         android:layout_height="29dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="250dp"
-        android:text="TradeId"
+        android:text="Employee Id"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,14 +43,12 @@
         android:id="@+id/signUPButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginBottom="200dp"
         android:text="Signup"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/backFromSignuputton"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/cancelSignuputton"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <EditText
@@ -90,13 +88,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textEmailId" />
 
     <Button
-        android:id="@+id/backFromSignuputton"
+        android:id="@+id/cancelSignuputton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="200dp"
-        android:text="Back"
+        android:text="CANCEL"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPassword" />
