--- a/app/src/main/res/layout/activity_submit_order.xml
+++ b/app/src/main/res/layout/activity_submit_order.xml
@@ -153,10 +153,10 @@
         tools:layout_editor_absoluteY="29dp" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="83dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/homeImageButton"
+        android:layout_width="69dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
