--- a/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
+++ b/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
@@ -7,34 +7,15 @@
     tools:context=".TradeOptionStatusPortofolioActivity">
 
     <Button
-        android:id="@+id/portfolioButton"
-        android:layout_width="158dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="42dp"
-        android:text="See Portfolio"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeOrderButton" />
-
-    <Button
         android:id="@+id/placeOrderButton"
-        android:layout_width="159dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="158dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="228dp"
         android:text="Place a Trade"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orderStatusButton" />
 
     <Button
         android:id="@+id/backFromOptionScreenButton"
@@ -51,20 +32,32 @@
 
     <Button
         android:id="@+id/orderStatusButton"
-        android:layout_width="151dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="42dp"
-        android:text="Order Status"
+        android:layout_width="167dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="36dp"
+        android:text="Order Status / See Portfolio"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/portfolioButton" />
+        app:layout_constraintTop_toBottomOf="@+id/placeOrderButton" />
 
     <Button
         android:id="@+id/logoutButton"
-        android:layout_width="96dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="101dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="42dp"
         android:text="LOGOUT"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orderStatusButton" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="167dp"
+        android:layout_height="159dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fixengine" />
 </androidx.constraintlayout.widget.ConstraintLayout>
