--- a/app/src/main/res/layout/activity_order_execution.xml
+++ b/app/src/main/res/layout/activity_order_execution.xml
@@ -126,6 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
+        android:backgroundTint="#11AB8539"
         android:text="Accept Order"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execPriceEditText" />
@@ -137,6 +138,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:text="Execute Order"
+        android:backgroundTint="#3949AB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/execPriceEditText" />
 
