--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -46,6 +46,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="52dp"
         android:text="Signup"
+        android:backgroundTint="#3949AB"
         app:layout_constraintEnd_toStartOf="@+id/cancelSignuputton"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />
 
@@ -56,6 +57,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="232dp"
         android:ems="10"
+
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/traderIdTextView"
@@ -92,6 +94,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:text="CANCEL"
+        android:backgroundTint="#3949AB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />
 
@@ -128,4 +131,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/fixengine" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
