--- a/app/src/main/res/layout/activity_submit_order.xml
+++ b/app/src/main/res/layout/activity_submit_order.xml
@@ -116,8 +116,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
-        android:text="CANCEL"
+        android:text="CLEAR"
         android:textSize="18dp"
+        android:backgroundTint="#3949AB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buySellRadioGroup" />
 
@@ -128,6 +129,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="156dp"
         android:text="Submit"
+        android:backgroundTint="#3949AB"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buySellRadioGroup" />
