--- a/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
+++ b/app/src/main/res/layout/activity_trade_option_status_portofolio.xml
@@ -11,30 +11,32 @@
         android:layout_width="158dp"
         android:layout_height="53dp"
         android:layout_marginTop="228dp"
+        android:backgroundTint="#11AB8F39"
         android:text="Place a Trade"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/backFromOptionScreenButton"
-        android:layout_width="86dp"
-        android:layout_height="42dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="120dp"
-        android:backgroundTint="#FFB300"
-        android:backgroundTintMode="add"
-        android:text="Back"
-        android:textColor="#5E35B1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/backFromOptionScreenButton"-->
+<!--        android:layout_width="86dp"-->
+<!--        android:layout_height="42dp"-->
+<!--        android:layout_marginEnd="24dp"-->
+<!--        android:layout_marginBottom="120dp"-->
+<!--        android:backgroundTint="#FFB300"-->
+<!--        android:backgroundTintMode="add"-->
+<!--        android:text="Back"-->
+<!--        android:textColor="#5E35B1"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
     <Button
         android:id="@+id/orderStatusButton"
         android:layout_width="167dp"
         android:layout_height="66dp"
         android:layout_marginTop="36dp"
+        android:backgroundTint="#3949AB"
         android:text="Order Status / See Portfolio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -46,6 +48,7 @@
         android:layout_width="101dp"
         android:layout_height="45dp"
         android:layout_marginTop="42dp"
+        android:backgroundTint="#3949AB"
         android:text="LOGOUT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
