--- a/app/src/main/res/layout/order_info_row.xml
+++ b/app/src/main/res/layout/order_info_row.xml
@@ -100,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="Execute"
+            android:backgroundTint="#3949AB"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
