--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -9,12 +9,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="254dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="42dp"
+        android:layout_width="342dp"
+        android:layout_height="46dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="42dp"
-        android:text="      FIX  Engine"
+        android:text="     FiTech FIX Engine"
         android:textColor="#009CEC"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
